--- a/FussterServer/resources/pluginsHelp/CreatingPlugins.html
+++ b/FussterServer/resources/pluginsHelp/CreatingPlugins.html
@@ -2,29 +2,22 @@
 	<body> 
 	<h3>Creating a plugin</h3>
 		<ul>
-		 	<li>Make a project that includes in its build path FussterServer.jar</li>
-		 	<img src="step1.png"></br>
-		 	<img src="step2.png"></br>
-		 	<img src="step3.png"></br>
-		 	<img src="step4.png"></br>
+		 	<li>Make a project that includes in its build path FussterServer.jar</li></br>
 		 	<li>Create a class that extens FussterPlugin(or ServerPlugin, basicly any class extending FussterPlugin)</li>
-		 	<img src="myplugin.png"></br>
-		 	<li>Create a file named 'info.dat'.</li>
-		 	<img src="newfile.png"></br>
-		 	<img src="openwith.png"></br>
+		 	</br>
+		 	<li>Create a file named 'info.dat'.</li></br>
 		 	<li>The file must start with the following text.</li>
 		 		<ul>
 		 			<li>name:</li>
 		 			<li>version:</li>
 		 			<li>main:</li>
-		 		</ul>
+		 		</ul></br>
 		 	<li>Example:</li>
-		 	<img src="infoFinished.png"></br>
 		 		<ul>
 		 			<li>name:MyPlugin</li>
 		 			<li>version:0.0.1</li>
 		 			<li>main:mypackage.mysubpackage.MyPlugin</li>
-		 		</ul>
+		 		</ul><br>
 		 	<li>Export as a jar</li>
 		</ul>
 		<h4>All posible beginnings with examples:</h4>
